--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <h2>To-Do List</h2>
     <ul id="todo-list"></ul>
     <button id="add-item">Add Item</button>
+    <button type="button" id="clear-all">Clear All</button>
     <script src="index.js" defer></script>
 </body>
 
