--- a/index.html
+++ b/index.html
@@ -5,33 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Note Taking App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-dark text-light">
     <h1>My Notes</h1>
     <form id="account-info">
         <label for="account-number">Account Number:</label>
         <input type="text" id="account-number" name="accountNumber" placeholder="Enter Account Number">
-        <button type="button" class="copy-btn" data-field-id="account-number">Copy</button>
+        <button type="button" class="copy-btn btn btn-secondary" data-field-id="account-number">Copy</button>
         <br>
         <label for="phone-number">Phone Number:</label>
         <input type="tel" id="phone-number" name="phoneNumber" placeholder="Enter Phone Number">
-        <button type="button" class="copy-btn" data-field-id="phone-number">Copy</button>
+        <button type="button" class="copy-btn btn btn-secondary" data-field-id="phone-number">Copy</button>
         <br>
         <label for="cui-number">CUI Number:</label>
         <input type="text" id="cui-number" name="cuiNumber" placeholder="Enter CUI Number">
-        <button type="button" class="copy-btn" data-field-id="cui-number">Copy</button>
+        <button type="button" class="copy-btn btn btn-secondary" data-field-id="cui-number">Copy</button>
         <br>
         <label for="inc-number">INC Number:</label>
         <input type="text" id="inc-number" name="incNumber" placeholder="Enter INC Number">
-        <button type="button" class="copy-btn" data-field-id="inc-number">Copy</button>
+        <button type="button" class="copy-btn btn btn-secondary" data-field-id="inc-number">Copy</button>
         <br>
     </form>
     <h2>To-Do List</h2>
     <ul id="todo-list"></ul>
-    <button id="add-item">Add Item</button>
-    <button type="button" id="clear-all">Clear All</button>
+    <button id="add-item" class="btn btn-primary">Add Item</button>
+    <button type="button" id="clear-all" class="btn btn-danger">Clear All</button>
     <script src="index.js" defer></script>
 </body>
 
