Removed checkbox from list items

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-dark text-light">
+<body class="bg-dark text-light p-10">
     <h1>My Notes</h1>
     <form id="account-info">
         <label for="account-number">Account Number:</label>
