--- a/index.html
+++ b/index.html
@@ -10,30 +10,65 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-dark text-light p-10">
-    <h1>My Notes</h1>
-    <form id="account-info">
-        <label for="account-number">Account Number:</label>
-        <input type="text" id="account-number" name="accountNumber" placeholder="Enter Account Number">
-        <button type="button" class="copy-btn btn btn-secondary" data-field-id="account-number">Copy</button>
-        <br>
-        <label for="phone-number">Phone Number:</label>
-        <input type="tel" id="phone-number" name="phoneNumber" placeholder="Enter Phone Number">
-        <button type="button" class="copy-btn btn btn-secondary" data-field-id="phone-number">Copy</button>
-        <br>
-        <label for="cui-number">CUI Number:</label>
-        <input type="text" id="cui-number" name="cuiNumber" placeholder="Enter CUI Number">
-        <button type="button" class="copy-btn btn btn-secondary" data-field-id="cui-number">Copy</button>
-        <br>
-        <label for="inc-number">INC Number:</label>
-        <input type="text" id="inc-number" name="incNumber" placeholder="Enter INC Number">
-        <button type="button" class="copy-btn btn btn-secondary" data-field-id="inc-number">Copy</button>
-        <br>
-    </form>
-    <h2>To-Do List</h2>
-    <ul id="todo-list"></ul>
-    <button id="add-item" class="btn btn-primary">Add Item</button>
-    <button type="button" id="clear-all" class="btn btn-danger">Clear All</button>
+<body class="bg-dark text-light d-flex justify-content-center">
+    <div class="container-fluid p-3 app-width">
+        <h1>My Notes</h1>
+        <form id="account-info">
+            <div class="row mb-2">
+                <div class="col">
+                    <label for="account-number" class="form-label">Account Number:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="account-number" name="accountNumber" placeholder="Enter Account Number"
+                        class="form-control">
+                </div>
+                <div class="col">
+                    <button type="button" class="copy-btn btn btn-secondary"
+                        data-field-id="account-number">Copy</button>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col">
+                    <label for="phone-number" class="form-label">Phone Number:</label>
+                </div>
+                <div class="col">
+                    <input type="tel" id="phone-number" name="phoneNumber" placeholder="Enter Phone Number"
+                        class="form-control">
+                </div>
+                <div class="col">
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="phone-number">Copy</button>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col">
+                    <label for="cui-number" class="form-label">CUI Number:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="cui-number" name="cuiNumber" placeholder="Enter CUI Number"
+                        class="form-control">
+                </div>
+                <div class="col">
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="cui-number">Copy</button>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col">
+                    <label for="inc-number" class="form-label">INC Number:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="inc-number" name="incNumber" placeholder="Enter INC Number"
+                        class="form-control">
+                </div>
+                <div class="col">
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="inc-number">Copy</button>
+                </div>
+            </div>
+        </form>
+        <h2>To-Do List</h2>
+        <ul id="todo-list" class="list-group bg-dark"></ul>
+        <button id="add-item" class="btn btn-primary">Add Item</button>
+        <button type="button" id="clear-all" class="btn btn-danger">Clear All</button>
+    </div>
     <script src="index.js" defer></script>
 </body>
 
