--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Note Taking App</title>
+    <title>COX Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 
 <body class="bg-dark text-light d-flex justify-content-center">
     <div class="container-fluid p-3 app-width">
-        <h1>My Notes</h1>
+        <h1>COX Notes</h1>
         <form id="account-info">
             <div class="row mb-2">
                 <div class="col">
@@ -29,38 +29,36 @@
             </div>
             <div class="row mb-2">
                 <div class="col">
-                    <label for="phone-number" class="form-label">Phone Number:</label>
+                    <label for="account-12" class="form-label">Account #12:</label>
                 </div>
                 <div class="col">
-                    <input type="tel" id="phone-number" name="phoneNumber" placeholder="Enter Phone Number"
+                    <input type="text" id="account-12" name="account12" placeholder="Enter Account #12"
                         class="form-control">
                 </div>
                 <div class="col">
-                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="phone-number">Copy</button>
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="account-12">Copy</button>
                 </div>
             </div>
             <div class="row mb-2">
                 <div class="col">
-                    <label for="cui-number" class="form-label">CUI Number:</label>
+                    <label for="mdn" class="form-label">MDN:</label>
                 </div>
                 <div class="col">
-                    <input type="text" id="cui-number" name="cuiNumber" placeholder="Enter CUI Number"
-                        class="form-control">
+                    <input type="tel" id="mdn" name="mdn" placeholder="Enter MDN" class="form-control">
                 </div>
                 <div class="col">
-                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="cui-number">Copy</button>
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="mdn">Copy</button>
                 </div>
             </div>
             <div class="row mb-2">
                 <div class="col">
-                    <label for="inc-number" class="form-label">INC Number:</label>
+                    <label for="cui" class="form-label">CUI:</label>
                 </div>
                 <div class="col">
-                    <input type="text" id="inc-number" name="incNumber" placeholder="Enter INC Number"
-                        class="form-control">
+                    <input type="text" id="cui" name="cui" placeholder="Enter CUI" class="form-control">
                 </div>
                 <div class="col">
-                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="inc-number">Copy</button>
+                    <button type="button" class="copy-btn btn btn-secondary" data-field-id="cui">Copy</button>
                 </div>
             </div>
         </form>
