--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
                 </div>
             </div>
         </form>
-        <h2>To-Do List</h2>
-        <ul id="todo-list" class="list-group bg-dark"></ul>
+        <h2>Notes</h2>
+        <ul id="todo-list" class="list-group bg-dark">
+            <!-- List items will be dynamically added here -->
+        </ul>
         <button id="add-item" class="btn btn-primary">Add Item</button>
         <button type="button" id="clear-all" class="btn btn-danger">Clear All</button>
     </div>
